# dohm-ble

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/dohm/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  fan.py  manifest.json  strings.json
docs/: debugging.md  protocol.md  reverse-engineering.md
docs/superpowers/specs/: 2026-06-01-dohm-ble-design.md
src/dohm/: __init__.py  client.py  const.py  protocol.py
tests/: test_client.py  test_protocol.py
tools/: advert.py  explore.py  extract_writes.py  probe.py
