[project]
name = "dohm"
version = "0.1.0"
description = "Reverse-engineered BLE control for the Marpac Dohm sound machine"
authors = [
    { name = "Martin Emde", email = "me@martinemde.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bleak>=3.0.2",
    "bleak-retry-connector>=4.6.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
